--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.android.rudimentpractice.MainActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/drums" />
+        android:orientation="vertical"
+        tools:context="com.example.android.rudimentpractice.MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="40 Essential Rudiments"
-        android:textAlignment="center"
-        android:background="#FDD835"
-        android:padding="20dp"
-        android:layout_margin="20dp"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/drums" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Single Stroke Roll Rudiments"
-        android:textAlignment="center"
-        android:background="#FDD835"
-        android:padding="20dp"
-        android:layout_margin="20dp"
-        android:onClick="openSingleStrokeRudiments"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="#FDD835"
+            android:padding="20dp"
+            android:text="40 Essential Rudiments"
+            android:textAlignment="center" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Double Stroke Roll Rudiments"
-        android:textAlignment="center"
-        android:background="#FDD835"
-        android:padding="20dp"
-        android:layout_margin="20dp"/>
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="#FDD835"
+            android:onClick="openSingleStrokeRudiments"
+            android:padding="20dp"
+            android:text="Single Stroke Roll Rudiments"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="#FDD835"
+            android:padding="20dp"
+            android:text="Multiple Stroke Roll Rudiments"
+            android:textAlignment="center"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="#FDD835"
+            android:padding="20dp"
+            android:text="Double Stroke Roll Rudiments"
+            android:textAlignment="center"
+            android:onClick="openDoubleStrokeRudments"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="#FDD835"
+            android:padding="20dp"
+            android:text="Diddle Stroke Roll Rudiments"
+            android:textAlignment="center" />
+    </LinearLayout>
+</ScrollView>
