--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
         android:orientation="vertical"
         tools:context="com.example.android.rudimentpractice.MainActivity">
 
@@ -15,75 +16,88 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:src="@drawable/drums" />
+            android:src="@drawable/dwDrums" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="#FDD835"
+            android:background="@color/colorPrimary"
             android:padding="20dp"
             android:text="40 Essential Rudiments"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="#FAFAFA"
+            android:textSize="40sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="#FDD835"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="30dp"
+            android:background="#5D4037"
             android:onClick="openSingleStrokeRudiments"
             android:padding="20dp"
             android:text="Single Stroke Roll Rudiments"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="30dp"
+            android:background="#FDD835"
+            android:onClick="openMultipleRudiments"
+            android:padding="20dp"
+            android:text="Multiple Stroke Roll Rudiments"
             android:textAlignment="center" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="30dp"
             android:background="#FDD835"
-            android:padding="20dp"
-            android:text="Multiple Stroke Roll Rudiments"
-            android:textAlignment="center"
-            android:onClick="openMultipleRudiments"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="#FDD835"
+            android:onClick="openDoubleStrokeRudments"
             android:padding="20dp"
             android:text="Double Stroke Roll Rudiments"
-            android:textAlignment="center"
-            android:onClick="openDoubleStrokeRudments"/>
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="30dp"
             android:background="#FDD835"
+            android:onClick="openDiddleStrokeRudiments"
             android:padding="20dp"
             android:text="Diddle Stroke Roll Rudiments"
-            android:textAlignment="center"
-            android:onClick="openDiddleStrokeRudiments"/>
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="30dp"
             android:background="#FDD835"
+            android:onClick="openFlamRudiments"
             android:padding="20dp"
             android:text="Flam Stroke Roll Rudiments"
-            android:textAlignment="center"
-            android:onClick="openFlamRudiments"/>
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="30dp"
             android:background="#FDD835"
+            android:onClick="openDragRudiments"
             android:padding="20dp"
             android:text="Drag Stroke Roll Rudiments"
-            android:textAlignment="center"
-            android:onClick="openDragRudiments"/>
+            android:textAlignment="center" />
     </LinearLayout>
 </ScrollView>
